--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -18,4 +18,7 @@
       </div>
     </div>
   <% end %>
+</div
+<div class="center">
+   <%= will_paginate @posts, renderer: BootstrapPagination::Rails %>
 </div>
