--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,19 +7,25 @@
 		<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 		  <%= devise_error_messages! %>
 
-		  <div Class="form-group">
+		<div class="form-group">
+        	<%= f.label :name %>
+        	<%= f.text_field :name, autofocus: true, class: "form-control" %>
+  		</div>
+
+		<div Class="form-group">
 		  	<%= f.label :email %>
 		  	<%= f.email_field :email, autofocus: true, class: "form-control" %>
-		  </div>
+		</div>
 
-		  <div Class="form-group">
+		<div Class="form-group">
 		  	<%= f.label :password %>
 		  	<%= f.password_field :password, class: "form-control" %>
-		  </div>
+		</div>
 
-		  <div Class = "form-group">
+
+		<div Class = "form-group">
 		  	<%= f.submit "Sign up", class: "btn btn-primary" %>
-		  </div>
+		</div>
 		<% end %>
 	</div>
 
