--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -7,7 +7,7 @@
       <div class="panel-body">
         <%= pin.description %><br/>
         <strong><%= pin.user.name if pin.user %></strong>
-        <% if pin.user == current_user %>
+        <% if current_user && pin.user == current_user %>
           <div class="actions">
             <%= link_to raw('<span class="glyphicon glyphicon-edit"></span> Edit'), edit_pin_path(pin) %>
 
